option(
    'snoop-device',
    description: 'Linux module name of the snoop device.',
    type: 'string',
)
option(
    'post-code-bytes',
    description: 'Post code byte size.',
    type: 'integer',
    value: 1,
)
option(
    'systemd-target',
    description: 'Target for starting this service.',
    type: 'string'
)
option(
    '7seg', type: 'feature', description: 'Enable building 7seg POST daemon.',
)
option(
    'tests', type: 'feature', description: 'Build tests.',
)
option(
    'pcc', type: 'feature', description: 'Read post code through PCC.',
     value : 'enabled',
)
option(
    'sbmr-boot-progress', type: 'feature', description: 'Read boot progress code through SSIF.',
     value : 'disabled',
)
option(
    'snoop-feature', type: 'feature', description: 'Read post code using snoop.',
     value : 'enabled',
)

